# api

./: .env.example  .gitignore  Dockerfile  README.md  admin-openrc.sh  pyproject.toml
app/: main.py
app/api/routers/: servers.py
app/core/: config.py  errors.py
app/models/: requests.py  responses.py
app/services/: openstack_client.py  vm_service.py
openstack_vm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_errors.py  test_health_endpoint.py  test_servers_endpoints.py
