[project]
name = "openstack-vm-api"
version = "0.1.0"
description = "FastAPI prototype for OpenStack VM lifecycle management"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Assessment Prototype" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "openstacksdk",
  "keystoneauth1",
  "pydantic",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "pytest-cov",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

